--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
         <header>
             <nav class="top-nav teal">
                 <div class="container">
-                    <div id="aboutme" class="nav-wrapper"><a class="page-title">Néstor Álvarez-Díaz</a></div>
+                    <div id="aboutme" class="nav-wrapper">
+                        <a href="#" data-activates="slide-out"
+                           class="button-collapse hide-on-large-only white-text">
+                            <i class="material-icons">menu</i>
+                        </a>
+                        <a class="page-title">Néstor Álvarez-Díaz</a>
+                    </div>
                 </div>
             </nav>
-            <a href="#" data-activates="slide-out"
-               class="button-collapse top-nav full hide-on-large-only white-text top-left">
-                <i class="material-icons">menu</i>
-            </a>
 
             <ul id="slide-out" class="side-nav fixed">
                 <li>
